# key-locator-api

./: .gitignore  Makefile  README.md  manifest_template.yml  pyproject.toml
.github/workflows/: continuous-integration.yml
azure/: azure-external-release-pipeline.yml  azure-internal-release-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  azure-release-template.yml  project.yml
proxies/live/apiproxy/: key-locator.xml
proxies/live/apiproxy/policies/: AccessEntity.GetApiProductDetails.xml  AccessEntity.GetAppDetails.xml  AssignMessage.AddCors.xml  AssignMessage.CatchallErrorMessage.xml  AssignMessage.GenerateJkuResponse.xml  AssignMessage.SetJwksTarget.xml  ExtractVariables.GetApiProductEnvironment.xml  ExtractVariables.GetApiProductName.xml  ExtractVariables.GetJwksUrl.xml  Quota.xml  RaiseFault.404NotFound.xml  SpikeArrest.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/live/apiproxy/targets/: jwks.xml
specification/: key-locator-api.yaml  package.json
specification/scripts/: convert-spec-file.js
tests/: conftest.py  pyproject.toml  test_key_locator.py
