[tool.poetry]
name = "api_tests"
version = "0.1.0"
description = ""
authors = ["Matt Jarvis <matt.jarvis1@nhs.net>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
pytest = "^6.1.2"
api-test-utils = {url = "https://github.com/NHSDigital/apim-test-utils/releases/download/v1.1.1-alpha/api_test_utils-1.1.1a0-py3-none-any.whl"}
pytest-asyncio = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
